Fixed iphone view by controlling overflow

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -47,3 +47,7 @@ table {
 	border-spacing: 0;
 }
 
+html,body {
+	width: 100%;
+	overflow-x: hidden;
+}
